--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/datetimepicker": "^6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -23,9 +24,13 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-query": "^3.39.3",
+    "react-select": "^5.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
